<resources>
    <string name="app_name">HoneyIAmHome</string>
    <string name="start_tracking_location">Start tracking location</string>
    <string name="stop_tracking_location">Stop tracking location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="your_home_location">Your Home Location:</string>
    <string name="set_home_location">Set location as Home</string>
    <string name="clear_home">Clear Home</string>
    <string name="your_current_location">Your current location</string>
    <string name="dialog_location_message">We need your location permission in order to track  yor location</string>
    <string name="dialog_sms_message">We need your sms permission in order to use this app</string>
    <string name="dialog_location_title">Location permission Approval</string>
    <string name="dialog_sms_title">SMS permission Approval</string>
    <string name="cancel">Cancel</string>
    <string name="set_sms_phone_number">set SMS phone</string>
    <string name="popup_cancel">Cancel</string>
    <string name="popup_set">Set</string>
    <string name="popup_write_phone_here">Write phone num here</string>
    <string name="delete_phone">Delete phone</string>
</resources>
