<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_homeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:text="@string/your_home_location"
        android:textSize="24sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/main_homeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_homeHeader"
        android:layout_marginTop="16dp"
        android:text="my home location"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/main_clear_homeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_home"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_homeField"
        android:layout_marginTop="16dp"
        android:background="@color/colorSetHomeLocation"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/main_set_homeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_home_location"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_clear_homeLocation"
        android:layout_marginTop="24dp"
        android:background="@color/colorSetHomeLocation"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/mainActivity_currentLocationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_set_homeLocation"
        android:text="@string/your_current_location"
        android:layout_marginTop="32dp"
        android:textSize="24sp"/>


    <TextView
        android:id="@+id/mainActivity_latitudeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_currentLocationHeader"
        android:text="@string/latitude"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mainActivity_latitudeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_latitudeHeader"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/mainActivity_longitudeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_latitudeField"
        android:text="@string/longitude"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mainActivity_longitudeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_longitudeHeader"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/mainActivity_accuracyHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_longitudeField"
        android:text="@string/accuracy"
        android:layout_marginTop="16dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/mainActivity_accuracyField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainActivity_accuracyHeader"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/main_start_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking_location"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_accuracyField"
        android:background="@color/colorGreenStart"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/main_stop_tracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking_location"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainActivity_accuracyField"
        android:background="@color/colorRedStop"
        android:visibility="gone"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>