<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_background"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/popup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/popup_edit_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="32dp"
        android:textSize="20sp"
        android:importantForAutofill="no"
        android:hint="@string/popup_write_phone_here"/>

    <Button
        android:id="@+id/popup_set_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_set"
        android:background="@drawable/popup_round_button"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_text"
        app:layout_constraintEnd_toStartOf="@id/popup_cancel_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/popup_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_cancel"
        android:background="@drawable/popup_round_button"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/popup_set_btn"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:textSize="14sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>